hphp/test/slow/readonly/xhp_attributes.php.expectf

Fatal error: Readonly values cannot be written to xhp attributes at this time. in %s on line 12
